--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -1360,6 +1360,7 @@
   display: flex;
   gap: 2rem;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .MatchObjectHorizontalTypeDragDropFlexBox3>div {
@@ -1376,7 +1377,7 @@
   display: flex;
   margin-top: 2rem;
   align-items: center;
-  gap: 10px;
+  gap: 50px;
   flex-wrap: wrap;
 }
 
@@ -1391,6 +1392,7 @@
   gap: 2rem;
   flex-wrap: wrap;
   width: 100%;
+  height: fit-content;
 }
 
 .MatchObjectHorizontalTypeDragDropBox {
