--- a/TeacherOnlineQuiz/component/AllDisabledQuestion/DisabledHorizontalFillUpsEquationType/DisabledHorizontalFillUpsEquationType.module.css
+++ b/TeacherOnlineQuiz/component/AllDisabledQuestion/DisabledHorizontalFillUpsEquationType/DisabledHorizontalFillUpsEquationType.module.css
@@ -1290,6 +1290,7 @@
   display: flex;
   gap: 2rem;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .MatchObjectHorizontalTypeDragDropFlexBox3>div {
@@ -1305,7 +1306,7 @@
   display: flex;
   margin-top: 2rem;
   align-items: center;
-  gap: 10px;
+  gap: 50px;
   flex-wrap: wrap;
 }
 
@@ -1319,6 +1320,7 @@
   display: flex;
   gap: 2rem;
   flex-wrap: wrap;
+  height: fit-content;
 }
 
 .MatchObjectHorizontalTypeDragDropBox {
